new DatePicker Component Implemented, potential date problem solved!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>AllPawsInn</title>
 
 	<link rel="stylesheet" href="./src/css/main.css">
+	<link rel="stylesheet" href="./src/css/dayPicker.css">
 	<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./node_modules/react-resizable/css/styles.css">
 	<link rel="stylesheet" href="./node_modules/react-datepicker/dist/react-datepicker.css">
