tried react-responsive-table, not worked. Implemented our own design

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="./node_modules/react-datepicker/dist/react-datepicker.css">
 	<link rel="stylesheet" href="./node_modules/react-grid-layout/css/styles.css">
 	<link rel="stylesheet" href="./src/css/Navbar.css">
+	<link rel="stylesheet" href="./src/css/table.css">
 	<script>
 		require('babel-register');
 		window.$ = window.jQuery = require('./node_modules/jquery/dist/jquery.min');
